syntax = "proto3";

package protoproto;

option go_package = "./";

message Restaurants {
  repeated Restaurant restaurants= 1;
  string error = 2;
}

message Restaurant {
  int64 id = 1;
  string img = 2;
  string name = 3;
  int64 cost_for_free_delivery = 4;
  int64 min_delivery = 5;
  int64 max_delivery = 6;
  float rating = 7;
}


message RestaurantId {
  int64 id = 1;
}

message RestaurantInfo {
  int64 id = 1;
  string  img = 2;
  string  name = 3;
  int64 cost_for_free_delivery = 4;
  int64 min_delivery = 5;
  int64 max_delivery = 6;
  float rating = 7;
  bool favourite = 8;
  repeated Tags tags = 9;
  repeated Menu menu = 10;
  string error = 11;
}

message Menu {
  string name = 1;
  repeated DishesMenu dishes = 2;
}

message DishesMenu {
  int64 id = 1;
  string name = 2;
  int64 cost = 3;
  int64 ccal = 4;
  string img = 5;
}

message Tags {
  int64 id = 1;
  string name = 2;
}

message DishInfo {
  int64 restaurant_id = 1;
  int64 dish_id = 2;
}

message Empty { }

message Dishes {
  int64 id = 1;
  string img = 2;
  string name = 3;
  int64 cost = 4;
  int64 ccal = 5;
  string description = 6;
  repeated Radios  radios = 7;
  repeated Ingredients ingredients = 8;
  string error = 9;
}

message Radios {
  string name = 1;
  int64 id = 2;
  repeated CheckboxesRows rows = 3;
}

message CheckboxesRows {
  int64 id = 1;
  string name = 2;
}

message Ingredients {
  int64 id = 1;
  string name = 2;
  int64 cost = 3;
}

message NewReview {
  RestaurantInfo restaurant = 1;
  string text = 2;
  int64 rate = 3;
  int64 id = 4;
}

message Error {
  string error = 1;
}

message SearchRestaurantText {
  string text = 1;
}

message ResReview {
  int64 id = 1;
  string  img = 2;
  string  name = 3;
  int64 cost_for_free_delivery = 4;
  int64 min_delivery = 5;
  int64 max_delivery = 6;
  float rating = 7;
  repeated Review review = 8;
  repeated Tags tags = 9;
  string error = 10;
}

message Review {
  string name = 1;
  string text = 2;
  string date = 3;
  string time = 4;
  int64 rate = 5;
}

message UserId {
  int64 id = 1;
}

message EditRestaurantInFavoriteRequest {
  int64 id_restaurant = 1;
  int64 id_client = 2;
}

message ResponseEditRestaurantInFavorite {
  bool status = 1;
  string error = 2;
}

service RestaurantService {
  rpc AllRestaurants(Empty) returns (Restaurants);
  rpc GetRestaurant(RestaurantId) returns (RestaurantInfo);
  rpc RestaurantDishes(DishInfo) returns (Dishes);
  rpc CreateReview(NewReview) returns (Error);
  rpc GetReview(RestaurantId) returns (ResReview);
  rpc SearchRestaurant(SearchRestaurantText) returns (Restaurants);
  rpc GetFavoriteRestaurants(UserId) returns (Restaurants);
  rpc EditRestaurantInFavorite(EditRestaurantInFavoriteRequest) returns (ResponseEditRestaurantInFavorite);
}
